# drf_polls

./: LICENSE  README.md  manage.py  pyproject.toml  requirements.txt
drf_polls/: settings.py  urls.py  wsgi.py
polls/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
polls/migrations/: 0001_initial.py
users/: permissions.py  serializers.py  urls.py  views.py
